--- a/flex/04-flex-information/style.css
+++ b/flex/04-flex-information/style.css
@@ -1,5 +1,15 @@
 body {
   font-family: 'Courier New', Courier, monospace;
+  text-align: center;
+}
+
+.container{
+  display: flex;
+  justify-content: space-around;
+}
+
+.duo{
+  max-width: 200px;
 }
 
 img {
@@ -10,6 +20,7 @@ img {
 .title {
   font-size: 36px;
   font-weight: 900;
+  margin-bottom: 50px;
 }
 
 /* do not edit this footer */
